--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,11 +1,9 @@
 [supervisord]
 nodaemon=true
+loglevel=debug
 
 [program:django]
 command=python3 manage.py runserver 0.0.0.0:8080
 
 [program:celery]
 command=celery -A gm_pr worker -l info --concurrency=20
-
-[program:sshd]
-command=/usr/sbin/sshd -D
