add db migration

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,8 +2,14 @@
 nodaemon=true
 loglevel=debug
 
+[program:migrate]
+command=python3 manage.py migrate
+priority=10
+
 [program:django]
 command=python3 manage.py runserver 0.0.0.0:8080
+priority=20
 
 [program:celery]
 command=celery -A gm_pr worker -l info --concurrency=20
+priority=30
