--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,10 +4,11 @@ loglevel=debug
 
 [program:migrate]
 command=python3 manage.py migrate
+autorestart=false
 priority=10
 
 [program:django]
-command=python3 manage.py runserver 0.0.0.0:8080
+command=python3 manage.py runserver 0.0.0.0:8000
 priority=20
 
 [program:celery]
