Update README, document setting_project.py and add screenshot
Thx Carmen for the screenshot :-)

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -7,6 +7,6 @@ command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFO
 priority=20
 
 [program:celery]
-command=celery -A gm_pr worker -l info --concurrency=20
+command=python3 manage.py celeryd -l info --concurrency=20
 user=www-data
 priority=30
