--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -21,7 +21,16 @@ loglevel=debug
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 priority=20
 
+[program:rabbitmq]
+command=su -s /bin/bash - rabbitmq /usr/lib/rabbitmq/bin/rabbitmq-server
+directory=/var/lib/rabbitmq
+priority=30
+
+[program:rabbitmq-setting]
+command=/bin/bash -c "sleep 10; rabbitmqctl add_user gm_pr gm_pr && rabbitmqctl add_vhost gm_pr && rabbitmqctl set_permissions -p gm_pr gm_pr '.*' '.*' '.*'"
+priority=40
+
 [program:celery]
 command=python3 manage.py celeryd -l info --concurrency=60
 user=www-data
-priority=30
+priority=50
