Add the migrate script to supervisord.conf

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -39,3 +39,7 @@ priority=50
 command=python3 manage.py collectstatic --noinput
 user=www-data
 priority=60
+
+[program:migrate]
+command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate"
+priority=70
