Added an optional sql script for the docker container.
The script will be executed when the docker
container starts. This will allow running a docker container
with projects and repositories already filled in, not
requiring manual creation in the admin interface.

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -41,5 +41,5 @@ user=www-data
 priority=60
 
 [program:migrate]
-command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate"
+command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate && cat gm_pr/projects.sql |python3 manage.py dbshell"
 priority=70
