Removed the projects.sql file.
Now the optional db init to create projects and repos
is done by the init_projects.py script, and the names of
the projects and repos to create come from the GM_PR_INITIAL_PROJECTS
environment variable.

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -41,5 +41,5 @@ user=www-data
 priority=60
 
 [program:migrate]
-command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate && cat gm_pr/projects.sql |python3 manage.py dbshell"
+command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
 priority=70
