--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -21,8 +21,7 @@ RUN apt-get install -y \
     supervisor \
     apache2 \
     libapache2-mod-wsgi-py3 \
-    python3-pip \
-    sqlite3
+    python3-pip
 ADD commons.txt /tmp/commons.txt
 RUN pip3 install -r /tmp/commons.txt
 ADD gm_pr.conf /etc/apache2/sites-available/gm_pr.conf
