--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -40,6 +40,11 @@ command=python3 manage.py collectstatic --noinput
 user=www-data
 priority=60
 
-[program:migrate]
-command=/bin/bash -c "sleep 15; python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
+[program:makemigrations]
+command=/bin/bash -c "sleep 15; python3 manage.py makemigrations"
 priority=70
+
+[program:migrate]
+command=/bin/bash -c "sleep 20; python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
+user=www-data
+priority=80
