--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -45,6 +45,6 @@ command=/bin/bash -c "sleep 15; python3 manage.py makemigrations"
 priority=70
 
 [program:migrate]
-command=/bin/bash -c "sleep 20; python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
+command=/bin/bash -c "sleep 20; python3 manage.py migrate --fake-initial && python3 manage.py shell <gm_pr/init_projects.py"
 user=www-data
 priority=80
