cleanup supervisord.conf
 * reduce sleep timer
 * add "startsecs=0" in order to tell supervisord not restart command that
exit in less than 1 sec (migration, collect, ...)

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -28,6 +28,7 @@ priority=30
 
 [program:rabbitmq-setting]
 command=/bin/bash -c "sleep 10; rabbitmqctl add_user gm_pr gm_pr && rabbitmqctl add_vhost gm_pr && rabbitmqctl set_permissions -p gm_pr gm_pr '.*' '.*' '.*'"
+startsecs=0
 priority=40
 
 [program:celery]
@@ -37,14 +38,18 @@ priority=50
 
 [program:collect]
 command=python3 manage.py collectstatic --noinput
-user=www-data
+user=root
+startsecs=0
 priority=60
 
 [program:makemigrations]
-command=/bin/bash -c "sleep 15; python3 manage.py makemigrations"
+command=python3 manage.py makemigrations gm_pr
+user=www-data
+startsecs=0
 priority=70
 
 [program:migrate]
-command=/bin/bash -c "sleep 20; python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
+command=/bin/bash -c "sleep 5; python3 manage.py migrate && python3 manage.py shell <gm_pr/init_projects.py"
 user=www-data
+startsecs=0
 priority=80
