Make start logs easier to read
Do not run init_projects.py through "manage.py shell", it makes the logs
hard to read because they contain all the prompts from the interactive
console.

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -49,7 +49,7 @@ startsecs=0
 priority=70
 
 [program:migrate]
-command=/bin/bash -c "sleep 5; python3 manage.py migrate --fake-initial && python3 manage.py shell <gm_pr/init_projects.py"
+command=/bin/bash -c "sleep 5; python3 manage.py migrate --fake-initial && python3 -m gm_pr.init_projects"
 user=www-data
 startsecs=0
 priority=80
