--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -49,7 +49,7 @@ startsecs=0
 priority=70
 
 [program:migrate]
-command=/bin/bash -c "sleep 5; python3 manage.py migrate --fake-initial && python3 -m gm_pr.init_projects"
+command=/bin/bash -c "sleep 5; python3 manage.py migrate --fake-initial && python3 manage.py init_projects"
 user=www-data
 startsecs=0
 priority=80
